--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-	"godotTools.editorPath.godot4": "c:\\Users\\Lilly\\Desktop\\Godot\\Godot_v4.2.1-stable_win64.exe"
+	"godotTools.editorPath.godot4": "e:\\Godot\\Godot_v4.2.1-stable_win64.exe"
 }
