--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -8,7 +8,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="Builds/Build V0.1.2/Infinite Space Shooter.exe"
+export_path="Builds/V0.2.3/Infinite Space Shooter.exe"
 encryption_include_filters=""
 encryption_exclude_filters=""
 encrypt_pck=false
